# pota-local-progress

./: .gitignore  README.md  pota-local-progress.py  pota_local_progress.py  pyproject.toml  requirements.txt
src/pota_local_progres/: pota_local_progress.py
src/pota_local_progress/: __main__.py  cli.py
